# parprog-2018-1

groups/1506-2/Lemyaskina_ES/: Lemyaskina_Otchyot.docx  README.md
groups/1506-2/Lemyaskina_ES/TBB_version3/: README.md  Source.cpp
groups/1506-2/Lemyaskina_ES/openMP_version2/: README.md
groups/1506-2/Lemyaskina_ES/test_version1/: README.md
groups/1506-2/antonova_la/: README.md
groups/1506-2/antonova_la/1-test-version/: README.md  runTests.py
groups/1506-2/antonova_la/2-openmp/: README.md
groups/1506-2/antonova_la/3-tbb/: README.md
groups/1506-2/kataev_rd/: README.md
groups/1506-2/kataev_rd/1-test-version/: README.md
groups/1506-2/kataev_rd/2-openmp/: README.md
groups/1506-2/kataev_rd/3-tbb/: README.md
groups/1506-2/kostjunin_av/: README.md
groups/1506-2/kostjunin_av/1-test-version/: README.md  StandardSort.cpp  checker.cpp  generator.cpp  solver.cpp
groups/1506-2/kostjunin_av/2-openmp/: README.md
groups/1506-2/kostjunin_av/3-tbb/: README.md
groups/1506-2/smertin_ds/1-test_version/: README.md
groups/1506-2/smertin_ds/2-openmp_version/: CMakeLists.txt  main-script.py
groups/1506-2/smertin_ds/2-openmp_version/pyscripts/: checker.py  full_cycle_of_checks.py  testsgenerator.py
groups/1506-2/smertin_ds/2-openmp_version/sources/: answersmaker.cpp  global_search_algorithm.cpp  tasksmaker.cpp
groups/1506-2/smertin_ds/3-tbb_version/: CMakeLists.txt  main-script.py
groups/1506-2/tsirulev_as/: README.md  report.docx
groups/1506-2/tsirulev_as/checker/: README.md  checker.sln  checker_main.cpp
groups/1506-2/tsirulev_as/generated matrs/: 1  10  2  3  4  5  6  7  8  9  README.md
groups/1506-2/tsirulev_as/generator/: README.md
groups/1506-2/tsirulev_as/solver/: README.md  Source.cpp  solver.sln
groups/1506-2/tsirulev_as/tests/: 1.ans  1mkl.ans  3.ans  3mkl.ans  4.ans  4mkl.ans  5.ans  5mkl.ans  8.ans  8mkl.ans
groups/1506-2/uhina_aa/: README.md
groups/1506-2/uhina_aa/1-test-version/: README.md
(+483 files in other folders)
